--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@react-icons/all-files": "^4.1.0",
     "chart.js": "^4.4.0",
     "react": "^18.2.0",
